[package]
name = "appres"
version = "0.1.0"
edition = "2018"

# See more keys0 and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
toml = "0.5"
