[package]
name = "appres"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
thiserror = "1.0"
toml = { version = "0.5", optional = true }

[features]
json_resources = ["serde", "serde_json"]
toml_resources = ["serde", "toml"]
yaml_resources = ["serde", "serde_yaml"]
